--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 	<link rel="stylesheet" href="vendor/font-awesome.css">
  	<link rel="stylesheet" href="1.css">
 <meta property="fb:app_id" content="668018136714370"/>
- 	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-90708823-1', 'auto');
-  ga('send', 'pageview');
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175510720-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175510720-1');
 </script>
+
 </head>
  <body > 
  <script>
