--- a/Web1/index.html
+++ b/Web1/index.html
@@ -82,7 +82,7 @@
     							<h4 class="gia pull-right">$69.69</h4>
     							<h4>Sản phẩm đầu tiên</h4>
     							<p>
-    								Đây là một đoạn mô tả ngắn về sản phẩm của công ty chúng tôi. Thích thì mua không thích thì mua
+    								Đây là một đoạn mô tả ngắn về sản phẩm của công ty chúng tôi. Mời các bạn xem
     							</p>
     							<div class="danhgia">
     								<div class="soreview pull-right">15 reviews</div>
@@ -107,7 +107,7 @@
     							<h4 class="gia pull-right">$69.69</h4>
     							<h4>Sản phẩm đầu tiên</h4>
     							<p>
-    								Đây là một đoạn mô tả ngắn về sản phẩm của công ty chúng tôi. Thích thì mua không thích thì mua
+    								Đây là một đoạn mô tả ngắn về sản phẩm của công ty chúng tôi. Mời các bạn xem
     							</p>
     							<div class="danhgia">
     								<div class="soreview pull-right">15 reviews</div>
@@ -131,7 +131,7 @@
     							<h4 class="gia pull-right">$69.69</h4>
     							<h4>Sản phẩm đầu tiên</h4>
     							<p>
-    								Đây là một đoạn mô tả ngắn về sản phẩm của công ty chúng tôi. Thích thì mua không thích thì mua
+    								Đây là một đoạn mô tả ngắn về sản phẩm của công ty chúng tôi. Mời các bạn xem
     							</p>
     							<div class="danhgia">
     								<div class="soreview pull-right">15 reviews</div>
@@ -155,7 +155,7 @@
     							<h4 class="gia pull-right">$69.69</h4>
     							<h4>Sản phẩm đầu tiên</h4>
     							<p>
-    								Đây là một đoạn mô tả ngắn về sản phẩm của công ty chúng tôi. Thích thì mua không thích thì mua
+    								Đây là một đoạn mô tả ngắn về sản phẩm của công ty chúng tôi. Mời các bạn xem
     							</p>
     							<div class="danhgia">
     								<div class="soreview pull-right">15 reviews</div>
@@ -179,7 +179,7 @@
     							<h4 class="gia pull-right">$69.69</h4>
     							<h4>Sản phẩm đầu tiên</h4>
     							<p>
-    								Đây là một đoạn mô tả ngắn về sản phẩm của công ty chúng tôi. Thích thì mua không thích thì mua
+    								Đây là một đoạn mô tả ngắn về sản phẩm của công ty chúng tôi. Mời các bạn xem
     							</p>
     							<div class="danhgia">
     								<div class="soreview pull-right">15 reviews</div>
