--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 github của mình </a>
         </p>
         <p>&#169; 2021 Bản quyền thuộc về <a href="https://youtu.be/AKNvTxWOdKw" class="footer-youtube"
-                target="_blank">Kênh Bedimcode</a> </p>
+                target="_blank">Kênh Bedimcode và Lê Xuân Mạnh</a> </p>
     </footer>
     <div class="scroll-up-btn">
         <i class="iconify" data-icon="fa:angle-up" data-inline="false"></i>
