--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a href="#skills" class="nav__link">Kỹ năng</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#experience" class="nav__link">Học  A A vấn và Kinh nghiệm</a>
+                        <a href="#experience" class="nav__link">Học vấn và Kinh nghiệmm</a>
                     </li>
                     <li class="nav__item">
                         <a href="#work" class="nav__link">Dự án</a>
